# fake-servicer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
services/: example_service.py
services/other_service/: __init__.py
